--- a/vim/.vim/perl-support/doc/ChangeLog
+++ b/vim/.vim/perl-support/doc/ChangeLog
@@ -1,4 +1,31 @@
 ---------------------------------------------------------------------------------------
+  RELEASE NOTES FOR VERSION 4.11
+---------------------------------------------------------------------------------------
+- Perl::Critic integration: severity and verbosity will be taken from the
+	configuration file if specificed.
+- Bugfix (Windows only): wrong quoting with command line parameters.
+- Several minor improvements.
+
+---------------------------------------------------------------------------------------
+  RELEASE NOTES FOR VERSION 4.10
+---------------------------------------------------------------------------------------
+- Bugfix: detection of a systemwide installation can fail.
+- Minor improvements.
+
+---------------------------------------------------------------------------------------
+  RELEASE NOTES FOR VERSION 4.9
+---------------------------------------------------------------------------------------
+- Windows: user and system installation.
+- Integration of Perl::Tags reworked.
+- Several minor bugfixes.
+
+---------------------------------------------------------------------------------------
+  RELEASE NOTES FOR VERSION 4.8
+---------------------------------------------------------------------------------------
+- Hotkeys \$x, \@x and \%x renamed (to avoid conflicts when writing references).
+- Bugfix, Regex-Tester: colouring matches shows an error message in a few cases.
+
+---------------------------------------------------------------------------------------
   RELEASE NOTES FOR VERSION 4.7.1
 ---------------------------------------------------------------------------------------
 - Bugfixes: insertion of Posix classes from the menu not working properly.
