--- a/vim/.vim/perl-support/doc/perl-hot-keys.tex
+++ b/vim/.vim/perl-support/doc/perl-hot-keys.tex
@@ -7,10 +7,10 @@
 %%                
 %%       Author:  Dr.-Ing. Fritz Mehner
 %%        Email:  mehner@fh-swf.de
-%%    Copyright:  Copyright (C)  2003-2009  Dr.-Ing. Fritz Mehner  (mehner@fh-swf.de)
+%%    Copyright:  Copyright (C)  2003-2010  Dr.-Ing. Fritz Mehner  (mehner@fh-swf.de)
 %%      Version:  see \Pluginversion
 %%      Created:  06.06.2003
-%%     Revision:  $Id: perl-hot-keys.tex,v 1.35 2010/05/10 14:50:21 mehner Exp $
+%%     Revision:  $Id: perl-hot-keys.tex,v 1.41 2011/06/19 15:34:27 mehner Exp $
 %%                
 %%=====================================================================================
 
@@ -25,8 +25,8 @@
 
 \setlength\parindent{0pt}
 
-\newcommand{\Pluginversion}{4.8}
-\newcommand{\ReleaseDate}{May 2010}
+\newcommand{\Pluginversion}{4.12}
+\newcommand{\ReleaseDate}{June 2011}
 
 %%----------------------------------------------------------------------
 %%  fancyhdr
@@ -97,6 +97,7 @@ Fritz Mehner (mehner@fh-swf.de)\\
 %%----------------------------------------------------------------------
 \hline 
 \multicolumn{2}{|r|}{\textsl{\textbf{H}elp}}    \\[1.0ex]
+\hline \verb'\rp \h' & read perldoc for word under cursor       \hfill (n)   \\
 \hline \verb'\hp'   & help (plugin) \hfill (n,i)\\
 \hline 
 %%----------------------------------------------------------------------
@@ -116,7 +117,6 @@ Fritz Mehner (mehner@fh-swf.de)\\
 \hline \verb'\chpo' & file header (.pod)                \hfill (n)      \\
 \hline \verb'\ckb'  & keyword comm. \verb'BUG'          \hfill (n, i)   \\
 \hline \verb'\ckt'  & keyword comm. \verb'TODO'         \hfill (n, i)   \\
-\hline \verb'\ckr'  & keyword comm. \verb'TRICKY'       \hfill (n, i)   \\
 \hline \verb'\ckw'  & keyword comm. \verb'WARNING'      \hfill (n, i)   \\
 \hline \verb'\cko'  & keyword comm. \verb'WORKAROUND'   \hfill (n, i)   \\
 \hline \verb'\ckn'  & keyword comm. \verb'new keyword'  \hfill (n, i)   \\
@@ -188,7 +188,7 @@ Fritz Mehner (mehner@fh-swf.de)\\
 \hline \verb'\ne'  & edit code snippet         \hfill (n)   \\
 %
 \hline \verb'\ntl' & edit local templates      \hfill (n)   \\
-\hline \verb'\ntg' & edit global templates     \hfill (n)   \\
+\hline \verb'\ntg' & edit global templates$^1$ \hfill (n)   \\
 \hline \verb'\ntr' & reread the templates      \hfill (n)   \\
 \hline
 \end{tabular}\\
@@ -247,16 +247,26 @@ Fritz Mehner (mehner@fh-swf.de)\\
 %%----------------------------------------------------------------------
 \hline
 \multicolumn{2}{|r|}{\textsl{\textbf{P}rofiling}}                 \\[1.0ex]
-\hline \verb'\rps'    & run \verb'SmallProf'            \hfill (n)\\
-\hline \verb'\rpf'    & run \verb'FastProf'             \hfill (n)\\
-\hline \verb'\rpn'    & run \verb'NYTProf'              \hfill (n)\\
-\hline \verb'\rpnc'   & open CSV file (\verb'NYTProf')  \hfill (n)\\
+\hline \verb'\rps'    & run \verb'SmallProf'              \hfill (n)\\
+\hline \verb'\rpf'    & run \verb'FastProf'               \hfill (n)\\
+\hline \verb'\rpn'    & run \verb'NYTProf'                \hfill (n)\\
+\hline \verb'\rpnc'   & open CSV file (\verb'NYTProf')    \hfill (n)\\
+\hline \verb'\rpnh'   & browse HTML files (\verb'NYTProf')\hfill (n)\\
 \hline
-\end{tabular}%
+\end{tabular}\\
 %%~~~~~ TABULAR :  end  ~~~~~~~~~~
+%
+\begin{minipage}[b]{75mm}%
+\scriptsize{%
+\vspace{10mm}
+\hrulefill\\
+$^1$ {systemwide installation only}\\
+}%
+\end{minipage}\\
 %
 \end{center}%
 \end{multicols}%
+%
 \newpage
 %%----------------------------------------------------------------------
 %%  PAGE 2
@@ -280,7 +290,6 @@ Fritz Mehner (mehner@fh-swf.de)\\
 \hline \verb'\rma'   & command line arguments for \texttt{make} \hfill (n)   \\
 \hline \verb'\rd'    & start debugger                           \hfill (n)   \\
 \hline \verb'\re'    & make script executable                   \hfill (n)   \\
-\hline \verb'\rp \h' & read perldoc for word under cursor       \hfill (n)   \\
 \hline \verb'\ri'    & show installed Perl modules              \hfill (n)   \\
 \hline \verb'\rg'    & generate Perl module list                \hfill (n)   \\
 \hline \verb'\ry'    & run \verb'perltidy'                      \hfill (n, v)\\
@@ -307,9 +316,9 @@ Fritz Mehner (mehner@fh-swf.de)\\
 %
 Ex commands for \texttt{perlcritic} (version 1.01+)\\
 Use tab expansion to choose the severity or the verbosity.\\[2.0ex]
-\texttt{ :CriticSeverity}  \> \texttt{1\ \ \ \ \ \ 2\ \ \ \ \ 3\ \ \ \ \ 4\ \ \ \ \ 5} \\
-                           \> \texttt{brutal cruel harsh stern gentle} \\[1.0ex]
-\texttt{ :CriticVerbosity} \> \texttt{1} $\ldots$ \texttt{11}\\[1.0ex]
+\texttt{ :CriticSeverity}  \> \texttt{\ 1\ \ \ \ \ \ 2\ \ \ \ \ 3\ \ \ \ \ 4\ \ \ \ \ 5} \\
+                           \> \texttt{\ brutal cruel harsh stern gentle} \\[1.0ex]
+\texttt{ :CriticVerbosity} \> \texttt{\ 1} $\ldots$ \texttt{11}\\[1.0ex]
 \texttt{ :CriticOptions}   \> option(s), see \texttt{perlcritic(1)}\\[5.5ex]
 %
 \hspace{30mm} \= \hspace{50mm} \= \kill
